--- a/package.json
+++ b/package.json
@@ -6,6 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "base-domain": "^1.4.1",
+    "coffee-script": "^1.9.3",
+    "moment": "^2.9.0",
+    "es6-promise": "^2.3.0",
+    "loopback-promised": "0.2.0"
+  },
   "author": "",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-mocha-chai-sinon": "0.0.9",
+    "loopback-with-domain": "1.3.2"
+  },
+
   "license": "ISC"
 }
