--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-mocha-chai-sinon": "0.0.9",
-    "loopback-with-domain": "1.3.2"
+    "loopback-with-admin": "1.5.0"
   },
 
   "license": "ISC"
