--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## creates custom model-definitions for loopback-with-admin",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt"
   },
   "dependencies": {
     "base-domain": "^1.4.1",
@@ -12,13 +12,21 @@
     "moment": "^2.9.0",
     "loopback-promised": "0.2.2"
   },
-  "author": "",
+  "author": "CureApp, Inc.",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-mocha-chai-sinon": "0.0.9",
     "loopback-with-admin": "1.5.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CureApp/base-domain-loopback.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CureApp/base-domain-loopback/issues"
+  },
+  "homepage": "https://github.com/CureApp/base-domain-loopback",
 
   "license": "ISC"
 }
