--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-mocha-chai-sinon": "0.0.9",
+    "grunt-contrib-yuidoc": "^0.7.0",
     "loopback-with-admin": "1.5.3"
   },
   "repository": {
