use debug module

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "coffee-script": "^1.9.3",
     "loopback-promised": "0.2.2",
     "moment": "^2.9.0",
+    "debug": "^2.2.0",
     "through": "^2.3.7"
   },
   "author": "CureApp, Inc.",
