use base-domain v1.9.3: fix error in requiring files in titanium-android

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "grunt"
   },
   "dependencies": {
-    "base-domain": "^1.10.0",
+    "base-domain": "1.9.3",
     "coffee-script": "^1.9.3",
     "debug": "^2.2.0",
     "loopback-promised": "0.2.4",
