--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "base-domain-loopback",
   "version": "1.5.2",
   "description": "## creates custom model-definitions for loopback-with-admin",
-  "main": "index.js",
+  "main": "dist/lib/loopback-domain-facade.js",
   "scripts": {
-    "test": "grunt"
+    "test": "grunt",
+    "bmp-p": "cc-bmp -p",
+    "bmp-m": "cc-bmp -m",
+    "bmp-j": "cc-bmp -j",
+    "circle": "cc-generate-yml",
+    "post-dependencies": "echo post-dependencies",
+    "pre-release": "grunt build",
+    "post-release": "echo post-release",
+    "gh-pages": "grunt yuidoc"
   },
   "dependencies": {
     "base-domain": "1.9.6",
@@ -18,9 +26,10 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-mocha-chai-sinon": "0.0.9",
     "grunt-contrib-yuidoc": "^0.7.0",
-    "loopback-with-admin": "1.5.4"
+    "grunt-mocha-chai-sinon": "0.0.9",
+    "loopback-with-admin": "1.5.4",
+    "node-circleci-autorelease": "^1.5.5"
   },
   "repository": {
     "type": "git",
@@ -30,5 +39,15 @@
     "url": "https://github.com/CureApp/base-domain-loopback/issues"
   },
   "homepage": "https://github.com/CureApp/base-domain-loopback",
-  "license": "ISC"
+  "license": "ISC",
+  "node-circleci-autorelease": {
+    "config": {
+      "git-user-name": "CircleCI",
+      "git-user-email": "circleci@cureapp.jp",
+      "version-prefix": "v",
+      "create-branch": false,
+      "create-gh-pages": true,
+      "gh-pages-dir": "doc"
+    }
+  }
 }
