--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "CureApp, Inc.",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-yuidoc": "^0.7.0",
     "grunt-mocha-chai-sinon": "0.0.9",
