--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## creates custom model-definitions for loopback-with-admin",
   "main": "dist/lib/loopback-domain-facade.js",
   "scripts": {
-    "test": "grunt",
+    "test": "grunt && grunt build && npm run base-domain-loopbackify-test",
+    "base-domain-loopbackify-test": "cd test/base-domain-loopbackify; ./test.sh; cd ../..",
     "bmp-p": "cc-bmp -p",
     "bmp-m": "cc-bmp -m",
     "bmp-j": "cc-bmp -j",
@@ -16,7 +17,7 @@
     "bmp": "cc-bmp"
   },
   "dependencies": {
-    "base-domain": "2.1.4",
+    "base-domain": "2.2.0",
     "coffee-script": "^1.9.3",
     "debug": "^2.2.0",
     "loopback-promised": "1.0.0",
@@ -25,6 +26,8 @@
   },
   "author": "CureApp, Inc.",
   "devDependencies": {
+    "browserify": "^11.2.0",
+    "coffeeify": "^1.1.0",
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-uglify": "^0.9.1",
