--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.2.3",
   "description": "## creates custom model-definitions for loopback-with-admin",
   "main": "dist/lib/loopback-domain-facade.js",
+  "directories": {
+    "test": "spec/"
+  },
   "bin": {
     "bd-create-master": "bin/create-master-json"
   },
@@ -30,14 +33,19 @@
   "author": "CureApp, Inc.",
   "devDependencies": {
     "browserify": "^11.2.0",
+    "chai": "^3.4.1",
     "coffeeify": "^1.1.0",
+    "espower-coffee": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-yuidoc": "^0.7.0",
     "grunt-mocha-chai-sinon": "0.0.9",
+    "grunt-mocha-test": "^0.12.7",
     "loopback-with-admin": "1.7.2",
-    "node-circleci-autorelease": "^1.5.6"
+    "mocha": "^2.3.3",
+    "node-circleci-autorelease": "^1.5.6",
+    "power-assert": "^1.1.0"
   },
   "repository": {
     "type": "git",
