--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.5.5",
   "description": "## creates custom model-definitions for loopback-with-admin",
   "main": "dist/lib/loopback-domain-facade.js",
+  "engines": {
+    "node": ">=0.12"
+  },
   "directories": {
     "test": "spec/"
   },
@@ -23,10 +26,10 @@
     "bmp": "cc-bmp"
   },
   "dependencies": {
-    "base-domain": "~3.6.5",
+    "base-domain": "~3.8.0",
     "coffee-script": "^1.9.3",
     "debug": "^2.2.0",
-    "loopback-promised": "1.0.0",
+    "loopback-promised": "~1.1.0",
     "moment": "^2.9.0",
     "through": "^2.3.7"
   },
@@ -37,6 +40,7 @@
     "coffeeify": "^1.1.0",
     "espower-coffee": "^1.0.0",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-yuidoc": "^0.7.0",
@@ -57,6 +61,11 @@
   "homepage": "https://github.com/CureApp/base-domain-loopback",
   "license": "ISC",
   "node-circleci-autorelease": {
+    "machine": {
+      "node": {
+        "version": "4.2.3"
+      }
+    },
     "config": {
       "git-user-name": "CircleCI",
       "git-user-email": "circleci@cureapp.jp",
