--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.1",
     "gulp-yuidoc": "^0.1.2",
-    "loopback-with-admin": "1.7.2",
+    "loopback-with-admin": "~1.8.0",
     "mocha": "^2.3.3",
     "node-circleci-autorelease": "^1.5.6",
     "power-assert": "^1.1.0"
