--- a/package.json
+++ b/package.json
@@ -16,20 +16,17 @@
     "bd-create-master": "bin/create-master-json"
   },
   "scripts": {
-    "test": "mocha -r spec/global.js spec/*.coffee spec/lib/*.coffee && gulp coffee && npm run base-domain-loopbackify-test",
-    "base-domain-loopbackify-test": "test/base-domain-loopbackify/test.sh"
+    "test": "mocha -r spec/global.js spec/*.coffee spec/lib/*.coffee && gulp coffee"
   },
   "dependencies": {
-    "base-domain": "~4.7.0",
+    "base-domain": "~5.0.0",
     "debug": "^2.2.0",
     "loopback-promised": "~1.2.0",
     "moment": "2.6 - 2.12"
   },
   "author": "CureApp, Inc.",
   "devDependencies": {
-    "browserify": "^11.2.0",
     "coffee-script": "^1.9.3",
-    "coffeeify": "^1.1.0",
     "espower-coffee": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.1",
