--- a/.autorelease.yml
+++ b/.autorelease.yml
@@ -19,3 +19,8 @@ circle:
   machine:
     node:
       version: 4.4.5
+  deployment:
+    create_release_branch:
+      branch:
+        - master
+        - v3
