--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## creates custom model-definitions for loopback-with-admin",
   "main": "dist/main",
   "browser": {
-    "./dist/main.js": "./dist/main-browser.js"
+    "dist/main.js": "./dist/main-browser.js"
   },
   "engines": {
     "node": ">=0.12"
