--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "wp": "webpack --config webpack-test/webpack.config.js"
   },
   "dependencies": {
-    "base-domain": "~5.1.2",
     "debug": "^2.2.0",
     "loopback-promised": "~1.3.2",
     "moment": "2.6 - 2.12"
+  },
+  "peerDependencies": {
+    "base-domain": "^5.1.6"
   },
   "author": "CureApp, Inc.",
   "devDependencies": {
